--- a/style1.css
+++ b/style1.css
@@ -490,20 +490,26 @@ h4 {
 }
 .section-3{
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
 }
-
- .person-1 .fa {
-    font-size: 600%;
-    margin: 100px 130px;
+ .person-1 .small-img {
+    width: 40%;
+    height: 35%;
+    border-radius: 50%;
+    margin: 50px 120px;
 }
-.person-2 .fa{
-    font-size: 600%;
-    margin: 100px 130px;
+.person-2 .small-img {
+    width: 40%;
+    height: 35%;
+    border-radius: 50%;
+    margin: 50px 120px;
 }
-.person-3 .fa {
-    font-size: 600%;
-    margin: 100px 130px;
+.person-3 .small-img {
+    width: 40%;
+    height: 35%;
+    border-radius: 50%;
+    margin: 50px 120px;
 }
 
 .section-3 .para {
@@ -512,7 +518,7 @@ h4 {
     display: inline-flex;
     position: relative;
     left: 12%;
-    top: 1%;
+    top: 5%;
     margin: 25px;
 }
 
@@ -526,35 +532,35 @@ h4 {
 .section-3 #h2 {
     position: absolute;
     top: 44%;
-    left: 46%;
+    left: 45%;
     font-size: 18px;
 }
 
 .section-3 #h3 {
     position: absolute;
     top: 44%;
-    left: 82%;
+    left: 76%;
     font-size: 18px;
 }
 
 .section-3 #name {
     position: absolute;
     top: 49%;
-    left: 10%;
+    left: 15%;
     font-size: 18px;
 }
 
 .section-3 #name1 {
     position: absolute;
     top: 49%;
-    left: 45%;
+    left: 46%;
     font-size: 18px;
 }
 
 .section-3 #name2 {
     position: absolute;
     top: 49%;
-    left: 80%;
+    left: 77%;
     font-size: 18px;
 } 
 
